fix: Add top spacing to the upload form

--- a/src/layouts/profile-upload/profile-upload.scss
+++ b/src/layouts/profile-upload/profile-upload.scss
@@ -2,6 +2,10 @@
   max-width: rem(960px) !important;
 }
 
+.profile-upload__form {
+  margin-top: 3rem;
+}
+
 .profile-upload__form-wrapper {
   display: grid;
   grid-template-columns: 1fr;
